assert-struct/tests/compile_fail/type_mismatch.stderr
error[E0599]: the method `as_ref` exists for reference `&u32`, but its trait bounds were not satisfied
  --> tests/compile_fail/type_mismatch.rs:18:14
   |
18 |         age: "thirty",
   |              ^^^^^^^^ method cannot be called on `&u32` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `u32: AsRef<_>`
           which is required by `&u32: AsRef<_>`
